<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioContacto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include android:id="@+id/action_bar"
            layout="@layout/action_bar">
        </include>

        <LinearLayout
            android:id="@+id/ll_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/action_bar">

            <TextView
                android:id="@+id/tv_formulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Formulario"
                android:textSize="25sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimaryText"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/NombreContacto"
                android:autofillHints="@string/NombreContacto"
                android:inputType="textPersonName"
                android:textColor="@color/colorSecondaryText"
                android:textSize="20sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/Correo"
                android:autofillHints="@string/Correo"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorSecondaryText"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mensaje"
                android:textSize="25sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimaryText"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"/>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:inputType="text"
                android:hint="@string/Descripcion"
                android:autofillHints="@string/Descripcion"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_enviar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:text="@string/BotonText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorTextIcon"
            android:background="@color/colorAccent"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>